Fix T69469: Overrun in file action type RNA enum

Think it was harmless in practice since we didn't actually enumerate the
items, only count them and access the set value. Still...